--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # State Management
+  flutter_riverpod: ^2.6.1
+  
+  # Local Database
+  sqflite: ^2.4.1
+  path_provider: ^2.1.5
+  path: ^1.9.0
+  
+  # HTTP & API
+  http: ^1.2.2
+  
+  # Connectivity
+  connectivity_plus: ^6.1.1
+  
+  # Utilities
+  uuid: ^4.5.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
